Add register users

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>START PAGE</h1>
+    <div sec:authorize="isAuthenticated()">
+        <span th:text="${#authentication.getPrincipal().getUsername()}"></span>
 
-    <form th:action="@{/logout}" method="post">
-        <input type="submit" value="Sign Out"/>
-    </form>
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" value="Sing Out">
+        </form>
+    </div>
+    <div sec:authorize="isAnonymous()">
+        <form th:action="@{/login}" method="get">
+            <input type="submit" value="Log in">
+        </form>
+    </div>
 </body>
 </html>
