--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Games</title>
 </head>
 <body>
+
+<h1>Games</h1>
+
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Price</th>
+    </tr>
+    <tr th:each="game : ${games}">
+        <td>
+            <a th:href="@{/games/{id}(id=${game.id})}" th:text="*{game.name}"></a>
+        </td>
+        <td th:text="*{game.price}"></td>
+    </tr>
+</table>
 
 </body>
 </html>
