--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -23,14 +23,39 @@
     </div>
 
     <div>
-        <form th:action="@{/}">
-            <input type="submit" value="Back">
+        <form th:action="@{/info/edit}" method="get">
+            <input type="submit" value="Edit">
         </form>
     </div>
     <br>
+
     <div>
-        <form th:action="@{/info/edit}" method="get">
-            <input type="submit" value="Edit">
+        <table border="1">
+            <tr>
+                <th>№ order</th>
+                <th>Content</th>
+                <th>Status</th>
+            </tr>
+            <tr th:each="order : ${userOrders}">
+                <td th:text="${order.id}"></td>
+                <td>
+                    <span th:each="game : ${order.games}">
+                        <span th:text="${game.name}"></span>
+                        <br>
+                    </span>
+                </td>
+                <td>
+                    <span th:if="${order.status.name() == 'PAID'}">Paid</span>
+                    <span th:if="${order.status.name() == 'NOT_PAID'}">Not paid</span>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <br>
+    <div>
+        <form th:action="@{/}">
+            <input type="submit" value="Back">
         </form>
     </div>
 </div>
