Added: game purchase function (generation of a new order and adding to the old one)

--- a/src/main/resources/templates/game-info.html
+++ b/src/main/resources/templates/game-info.html
@@ -39,6 +39,10 @@
     </p>
     <p><b>Price:</b> <label><span th:text="*{game.price}"></span> $</label></p>
 
+    <form th:action="@{/games/{id}(id=${game.id})}" method="post">
+        <input type="submit" value="Buy">
+    </form>
+    <br>
     <form th:action="@{/games}">
         <input type="submit" value="Back">
     </form>
