Added: adding new genres, platforms, developers and publishers

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -15,8 +15,20 @@
     <input type="submit" value="Game management">
 </form>
 <br>
-<form th:action="@{/admin/users}">
-    <input type="submit" value="User management">
+<form th:action="@{/admin/genres}">
+    <input type="submit" value="Genres management">
+</form>
+<br>
+<form th:action="@{/admin/developers}">
+    <input type="submit" value="Developers management">
+</form>
+<br>
+<form th:action="@{/admin/publishers}">
+    <input type="submit" value="Publishers management">
+</form>
+<br>
+<form th:action="@{/admin/platforms}">
+    <input type="submit" value="Platforms management">
 </form>
 <br>
 <form th:action="@{/}">
