Added: search by genre

--- a/src/main/resources/templates/admin/admin-add-game.html
+++ b/src/main/resources/templates/admin/admin-add-game.html
@@ -23,7 +23,8 @@
             </p>
             <p>
                 <label>Description: </label>
-                <input type="text" th:field="*{game.description}">
+<!--                <input type="text" th:field="*{game.description}">-->
+                <textarea th:field="*{game.description}"></textarea>
             </p>
             <p>
                 <label>Developer: </label>
