--- a/src/main/resources/templates/admin/admin-game-edit.html
+++ b/src/main/resources/templates/admin/admin-game-edit.html
@@ -18,7 +18,8 @@
                 <input type="date" th:field="*{release}">
             </label></p>
             <p>Description: <label>
-                <input type="text" th:field="*{description}">
+<!--                <input type="text" th:field="*{description}">-->
+                <textarea th:field="*{description}"></textarea>
             </label></p>
             <p>
                 Developer:
