--- a/src/main/resources/templates/game-info.html
+++ b/src/main/resources/templates/game-info.html
@@ -40,7 +40,10 @@
     <p><b>Price:</b> <label><span th:text="*{game.price}"></span> $</label></p>
 
     <form th:if="${isBought == false}" th:action="@{/games/{id}(id=${game.id})}" method="post">
-        <input type="submit" value="Buy">
+        <input th:if="${game.available.name() == 'AVAILABLE'}" type="submit" value="Buy">
+        <h3 th:if="${game.available.name() == 'ARCHIVE'}">
+            This game is not available for purchase because it has been archived
+        </h3>
     </form>
     <br>
     <h3 th:if="${isBought == true}">You already bought this game</h3>
