--- a/src/main/resources/templates/game-info.html
+++ b/src/main/resources/templates/game-info.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="https://www.thymeleaf.org"
->
+      xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Game info</title>
+    <title th:text="${game.name + ' - GAMEGURU'}">Game info</title>
 </head>
 <body>
 
