--- a/src/main/resources/templates/admin/admin-add-game.html
+++ b/src/main/resources/templates/admin/admin-add-game.html
@@ -18,6 +18,10 @@
                 <input type="text" th:field="*{game.name}">
             </p>
             <p>
+                <label>Cover URL: </label>
+                <input type="text" th:field="*{game.cover}">
+            </p>
+            <p>
                 <label>Release: </label>
                 <input type="date" th:field="*{game.release}">
             </p>
