--- a/src/main/resources/templates/blocks/navbar.html
+++ b/src/main/resources/templates/blocks/navbar.html
@@ -44,9 +44,47 @@
                 <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
             </form>
             <div sec:authorize="isAnonymous()">
-                <form th:action="@{/login}" method="get">
-                    <input type="submit" class="btn btn-outline-primary active" value="Sign In">
-                </form>
+<!--                <form th:action="@{/login}" method="get">-->
+<!--                    <input type="submit" class="btn btn-outline-primary active" value="Sign In">-->
+<!--                </form>-->
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Sign In
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Please sign in</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <form th:action="@{/login}" method="post">
+                            <div class="modal-body">
+                                <input type="text" id="login" class="form-control" placeholder="Login"
+                                       name="username" required autofocus/>
+                                <!--            <label for="login" class="sr-only">Login</label>-->
+                                <input type="password" id="password" placeholder="Password" name="password" class="form-control mt-3"/>
+                                <!--            <label for="password" class="sr-only">Password</label>-->
+                                <div th:if="${param.error}" class="mt-3 font-weight-normal">
+                                    Invalid username or password.
+                                </div>
+                                <div th:if="${param.logout}" class="mt-3 font-weight-normal">
+                                    You have been logged out.
+                                </div>
+                                <div class="mt-3 text-center">
+                                    <a th:href="@{/register}" class="text-decoration-none">Not have account? Register</a>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Login</button>
+                            </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="dropdown" sec:authorize="isAuthenticated()">
                 <a href="#" class="dropdown-toggle d-flex align-items-center hidden-arrow"
