--- a/src/main/resources/templates/admin/admin-game-edit.html
+++ b/src/main/resources/templates/admin/admin-game-edit.html
@@ -14,6 +14,9 @@
             <p>Name: <label>
                 <input type="text" th:field="*{name}">
             </label></p>
+            <p>Cover URL: <label>
+                <input type="text" th:field="*{cover}">
+            </label></p>
             <p>Release: <label>
                 <input type="date" th:field="*{release}">
             </label></p>
