--- a/src/main/resources/templates/blocks/sidebar.html
+++ b/src/main/resources/templates/blocks/sidebar.html
@@ -7,7 +7,7 @@
      class="list-group-item list-group-item-action btn-lg">
     Settings
   </a>
-  <a href="/info/history}"
+  <a href="/info/history"
      class="list-group-item list-group-item-action btn-lg">
     Purchase history
   </a>
