--- a/src/main/resources/templates/admin/admin-game-edit.html
+++ b/src/main/resources/templates/admin/admin-game-edit.html
@@ -15,7 +15,7 @@
                 <input type="text" th:field="*{name}">
             </label></p>
             <p>Cover URL: <label>
-                <input type="text" th:field="*{cover}">
+                <input type="url" th:field="*{cover}">
             </label></p>
             <p>Release: <label>
                 <input type="date" th:field="*{release}">
